--- a/public/index.html
+++ b/public/index.html
@@ -553,11 +553,16 @@ async function sendMessage() {
   if (!text) return;
   const body = { senderId: currentUser._id, receiverId: currentReceiver._id, message: text };
   const res = await fetch('/messages', {
-    method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(body)
-  });
-  const msg = await res.json();
-  socket.emit('send_message', msg);
-  displayMessage(msg);
+  method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(body)
+});
+const msg = await res.json();
+socket.emit('send_message', {
+  senderId: msg.sender,
+  receiverId: msg.receiver,
+  message: msg.message
+}); // ✅ Now it matches what server expects
+displayMessage(msg);
+
   chatMessage.value = '';
 }
 </script>
