--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
     <a href="/privacy.html">Privacy</a>
     <a href="/contact.html">Contact</a>
     <a href="/chat.html">Launch Chat</a>
+    <a href="/faq.html">FAQ</a>
+
   </nav>
 
   <main>
@@ -86,7 +88,6 @@
       <li>📤 Image and emoji support</li>
       <li>🛡️ Secure authentication system</li>
     </ul>
-
     <a href="/chat.html" class="btn">Open Chat App</a>
   </main>
 
