--- a/public/chat.html
+++ b/public/chat.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4906962969301207"
+     crossorigin="anonymous"></script>
     <meta name="description" content="Web Chat - Realtime messaging platform built for easy, secure communication.">
 <meta name="keywords" content="chat app, messaging, realtime, secure chat, webchat">
 <meta name="author" content="Your Name">
