--- a/public/privacy.html
+++ b/public/privacy.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4906962969301207"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-4906962969301207">
+    
   <meta charset="UTF-8" />
   <title>Privacy Policy - Web Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
