--- a/public/about.html
+++ b/public/about.html
@@ -1,17 +1,14 @@
-<!-- public/about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-adsense-account" content="ca-pub-4906962969301207">
-    
   <meta charset="UTF-8" />
-  <title>About Us - Web Chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn more about Web Chat, its mission, and who we are.">
+  <meta name="description" content="Learn more about Web Chat, its mission, and the team behind it.">
+  <title>About Us - Web Chat</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: #f9f9f9; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: #f9f9f9; line-height: 1.6; }
     header, footer { text-align: center; padding: 20px; background: #3498db; color: white; }
-    main { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    main { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
     a { color: #3498db; text-decoration: none; }
   </style>
 </head>
@@ -19,17 +16,35 @@
   <header>
     <h1>About Web Chat</h1>
   </header>
+
   <main>
-    <p><strong>Web Chat</strong> is a real-time messaging platform designed to help users connect instantly and securely. Launched in 2025, our goal is to provide a simple, user-friendly, and privacy-conscious environment for chatting online.</p>
+    <p>
+      Web Chat was launched in 2025 with the mission of providing a secure, fast, and user-friendly platform for real-time communication. Our focus is on privacy, convenience, and connecting people based on shared interests and geographic preferences. With an intuitive interface and powerful features, Web Chat enables meaningful conversations and helps users build lasting connections online.
+    </p>
 
     <h2>Our Mission</h2>
-    <p>To empower people to communicate freely and securely across geographical and cultural boundaries with fast, filtered, and real-time communication tools.</p>
+    <p>
+      Our mission is to empower individuals to communicate freely and securely across different regions and cultures. We aim to provide a messaging platform that emphasizes privacy, speed, and reliability, ensuring that every interaction is seamless and secure.
+    </p>
 
-    <h2>Who We Are</h2>
-    <p>Founded and maintained by <strong>Sailendra Kondapalli</strong>, a passionate web developer with a focus on user-centered design and real-time applications.</p>
+    <h2>Our Story</h2>
+    <p>
+      Web Chat was founded by <strong>Sailendra Kondapalli</strong>, a passionate web developer with extensive experience in real-time applications. The platform was created to address the need for secure, location-based chat systems that are easy to use on any device. From its initial launch, Web Chat has continuously evolved based on user feedback and technological advancements.
+    </p>
 
-    <p>Want to try it? <a href="/chat.html">Start Chatting</a></p>
+    <h2>Our Values</h2>
+    <ul>
+      <li><strong>Privacy:</strong> We prioritize user security and confidentiality.</li>
+      <li><strong>Accessibility:</strong> A seamless experience on both desktop and mobile devices.</li>
+      <li><strong>Reliability:</strong> Fast, real-time message delivery without delays.</li>
+      <li><strong>User-Centric Design:</strong> Easy-to-navigate interfaces and practical features.</li>
+    </ul>
+
+    <p>
+      Interested in joining? <a href="/chat.html">Start Chatting</a> today and experience Web Chat in action.
+    </p>
   </main>
+
   <footer>
     &copy; 2025 Web Chat. All rights reserved.
   </footer>
