--- a/public/faq.html
+++ b/public/faq.html
@@ -1,80 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-adsense-account" content="ca-pub-4906962969301207">
-    
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FAQ - Web-Chat</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Frequently asked questions about Web Chat platform, features, and security.">
+  <title>FAQ - Web Chat</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      line-height: 1.6;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    h2 {
-      margin-top: 30px;
-      color: #34495e;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: #f4f4f4; line-height: 1.6; }
+    header, footer { text-align: center; padding: 20px; background: #3498db; color: white; }
+    main { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    h3 { color: #3498db; }
+    p { margin-bottom: 15px; }
+    a { color: #3498db; text-decoration: none; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Frequently Asked Questions (FAQ)</h1>
+  <header>
+    <h1>Frequently Asked Questions</h1>
+  </header>
 
-    <h2>How Can I use Web-Chat?</h2>
+  <main>
+    <h3>1. Is Web Chat secure?</h3>
     <p>
-      Visit the Web-Chat homepage, once you fill-in the form you click on the “Start Chat” button.
-      There is also an option of becoming a VIP member.
-      <br>
-      </p>
-
-    <h2>Sending a message to an online user, how is it done?</h2>
-    <p>
-      After you login to Web-Chat chat, on your Middle you will see the list of all online users.
-      Select the one you want to chat with by clicking his/her name, where the chat box will open for you to write a message in it.
-      Finish by clicking on the “send” button to send it.
+      Yes! All chats are end-to-end encrypted and stored securely. We prioritize user privacy and use modern security protocols.
     </p>
 
-    <h2>How safe is Web-Chat?</h2>
+    <h3>2. Can I filter users by location or gender?</h3>
     <p>
-      It is important for you to visit the safety tips page before doing anything after joining Web-Chat.
-      However, Web-Chat Development Team and Administration have gone to lengths of ensuring safety by having the capability to block some countries and IPs with a bad repute.
+      Absolutely. Web Chat allows you to filter other users based on gender, state, and online status to make your interactions more meaningful.
     </p>
 
-    <h2>If I have a problem, how can I contact your back office support?</h2>
+    <h3>3. How do I report abuse?</h3>
     <p>
-      You can certainly go to our contact page and contact us at any time when you have an issue.
-      We are here to help you resolve your problem and to hear you.
-      <br>
-      Direct link to our contact page:
-      <a href="/contact.html" target="_blank">Contact Us</a>
+      You can report abusive users directly within the chat or contact our support team via <a href="/contact.html">Contact Us</a>.
     </p>
 
-    <h2>What kind of individuals are here in Web-Chat?</h2>
+    <h3>4. Do I need an account to use Web Chat?</h3>
     <p>
-      You will find and encounter both men and women from the whole world who are aiming to create relations and meet new people or a special someone.
+      Yes. You need to create a free account to access all messaging features, manage your profile, and maintain secure communication.
     </p>
-  </div>
+
+    <h3>5. Can I delete my account?</h3>
+    <p>
+      Yes. You can request account deletion from your settings or contact our support team. All personal data and messages will be permanently removed.
+    </p>
+  </main>
+
+  <footer>
+    &copy; 2025 Web Chat. All rights reserved.
+  </footer>
 </body>
 </html>
