--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta name="google-adsense-account" content="ca-pub-4906962969301207">
-  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Web Chat - Real-time messaging platform for private and fast communication.">
@@ -11,54 +9,14 @@
   <meta name="author" content="Sailendra Kondapalli">
   <title>Welcome to Web Chat</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background: #3498db;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      text-align: center;
-      margin: 10px 0;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #3498db;
-      font-weight: bold;
-    }
-    main {
-      padding: 30px;
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #777;
-    }
-    .btn {
-      display: inline-block;
-      padding: 20px 40px;
-      background: #3498db;
-      color: white;
-      border-radius: 5px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-    .btn:hover {
-      background: #2980b9;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; background: #f4f4f4; color: #333; }
+    header { background: #3498db; color: white; padding: 20px; text-align: center; }
+    nav { text-align: center; margin: 10px 0; }
+    nav a { margin: 0 15px; text-decoration: none; color: #3498db; font-weight: bold; }
+    main { padding: 30px; max-width: 900px; margin: auto; background: white; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 8px; line-height: 1.6; }
+    footer { text-align: center; padding: 20px; font-size: 14px; color: #777; }
+    .btn { display: inline-block; padding: 20px 40px; background: #3498db; color: white; border-radius: 5px; text-decoration: none; margin-top: 20px; }
+    .btn:hover { background: #2980b9; }
   </style>
 </head>
 <body>
@@ -73,23 +31,31 @@
     <a href="/contact.html">Contact</a>
     <a href="/chat.html">Launch Chat</a>
     <a href="/faq.html">FAQ</a>
-
   </nav>
 
   <main>
     <h2>Why Use Web Chat?</h2>
     <p>
-      Web Chat is a privacy-focused real-time messaging platform designed to help you connect with people based on gender and location filters. Experience instant delivery, emojis, image sharing, and more.
+      Web Chat is a privacy-focused real-time messaging platform designed to help you connect with people across the world based on gender and location filters. Our platform ensures that your conversations are delivered instantly and securely, with easy-to-use interfaces that work seamlessly on both desktop and mobile devices.
+    </p>
+    <p>
+      Unlike traditional messaging apps, Web Chat allows you to discover new friends, colleagues, or communities based on your interests and preferences. All chats are end-to-end encrypted, and messages are stored securely to ensure privacy. Whether you want to connect with nearby users or people from different regions, Web Chat makes it simple and safe.
+    </p>
+    <p>
+      Our intuitive interface offers features like unread message notifications, read receipts, real-time chat updates, and optional VIP membership for enhanced functionalities. Users can filter contacts by gender, state, or online status, ensuring that you connect with people who matter most to you.
     </p>
 
     <h3>Top Features</h3>
     <ul>
       <li>💬 Gender & location-based chat filtering</li>
-      <li>📲 Responsive mobile-ready layout</li>
-      <li>🧠 Intelligent message handling with read indicators</li>
-      <li>📤 Image and emoji support</li>
-      <li>🛡️ Secure authentication system</li>
+      <li>📲 Fully responsive, mobile-ready layout</li>
+      <li>🧠 Intelligent message handling with read/unread indicators</li>
+      <li>📤 Secure image and emoji support</li>
+      <li>🛡️ End-to-end secure authentication system</li>
     </ul>
+    <p>
+      Join thousands of users who trust Web Chat for private and reliable messaging. Our mission is to provide a platform that combines convenience, privacy, and real-time communication.
+    </p>
     <a href="/chat.html" class="btn">Open Chat App</a>
   </main>
 
